# HOG_For_Image_Classification_Detection

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
data/task2/: testFeats.csv  testLabels.csv  train0Labels.csv
data/task2/models/: 0  1  2  3  4  5  6  7  8  9
data/task3/: PR.csv  train0Labels.csv
data/task3/models/: 0  1  2  3  4  5  6  7  8  9
include/: Config.h  RandomForest.h  task1.h  task2.h  task3.h
src/: RandomForest.cpp  hog_visualization.cpp  task1.cpp  task2.cpp  task3.cpp
